--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     </div> <div class="box">
         <div class="profile">
-            <img src="http://source.unsplash.com//320x399/?men" alt="" class="prof-img">
+            <img src="assets/Logo.png" alt="" class="prof-img">
         </div>
         <div class="details">
             <div class="name">Gowthaman</div>
