--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="logo">
-            <img src="C:\Users\Gokul\ODD-HOLIDAY\Day-1\Dribbble-Logo.png" alt="logo" class="logo-img">
+            <img src="assets/download.png" alt="logo" class="logo-img">
         </div>
 
         <div class="in-flex">
@@ -127,7 +127,7 @@
 
     </div> <div class="box">
         <div class="profile">
-            <img src="assets/Logo.png" alt="" class="prof-img">
+            <img src="http://source.unsplash.com//320x399/?men" alt="" class="prof-img">
         </div>
         <div class="details">
             <div class="name">Gowthaman</div>
